# yoyo-vm

./: main.cpp  meson.build
include/yoyo_vm/: assembler.h  common.h  disassembler.h  emitter.h  instructions.h  vm.h  writer.h
src/yoyo_vm/: assembler.cpp  assembler.h  disassembler.cpp  emitter.cpp  emitter.h  instructions.h  vm.cpp  vm.h  writer.h
